# btp

./: .gitignore  Cargo.toml  README.md  benchmark_results.json  benchmark_runner.py  rustfmt.toml
.cargo/: config.toml
bench/: visualize.py
benches/: ascon_bench.rs
src/: ascon.rs  benchmark.rs  energy.rs  lib.rs  main.rs  main_host.rs  present.rs  speck.rs  stats.rs
src/ascon/: kat_hash_vectors.rs  kat_hash_vectors_embedded.rs  kat_vectors.rs  kat_vectors_embedded.rs
src/present/: kat_iso_vectors.rs
src/speck/: kat_bigendian.rs
test_data/: LWC_AEAD_KAT_128_128.txt  LWC_HASH_KAT_256.txt  present_kat_iso.txt
tests/: ascon_tests.rs  crypto_tests.rs  present_tests.rs  speck_tests.rs
